<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.8</version>
        <relativePath/>
    </parent>

    <groupId>kz.nutrifit</groupId>
    <artifactId>nutrifit-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>NutriFit AI — Parent</name>

    <properties>
        <java.version>21</java.version>
        <jjwt.version>0.11.5</jjwt.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Cloud BOM — совместим со Spring Boot 3.4.x/3.5.x -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2025.0.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- FIX CVE-2025-48924 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.18.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>services/monolith</module>
        <module>infrastructure/config-server</module>
        <module>infrastructure/discovery-server</module>
        <module>services/api-gateway</module>
        <module>services/auth-service</module>
        <module>services/user-service</module>
        <module>services/nutrition-service</module>
    </modules>

</project>
